--- a/PacemakerEpisodeStatistics/app/src/main/res/layout-port/activity_episode_statistic_port.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/layout-port/activity_episode_statistic_port.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/textthree"
+            android:text="@string/textone"
             android:id="@+id/textViewOne" />
 
         <ListView
