--- a/PacemakerEpisodeStatistics/app/src/main/res/layout-sw400dp/activity_episode_statistic_details.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/layout-sw400dp/activity_episode_statistic_details.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:id="@+id/statistic_details_layout"
-    tools:context="android.zonro.com.pacemakerepisodestatistics.EpisodeStatisticDetails">
+    tools:context="android.zonro.com.e15.grp15.pacemakerepisodestatistics.EpisodeStatisticDetails">
 
 
     <TextView
